--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -200,13 +200,74 @@
         </p>
     </details>
 
-    <h1>Emergency Contact</h1>
-    <h2>Contact one of the contatcs below if your family feel <br>
+    <br><br><br><br><br><br>
+
+    <h1 class="Titulo1" id="EmergencyContact">Emergency Contact</h1>
+    <h2 class="Parrafo1" id="ParrafoEmergency">Contact one of the contatcs below if your family feel <br>
         unwell and have similar symptoms such as Covid-19, make <br>
         sure you also take care of yourself before reporting us: 
     </h2>
 
+    <Section class="Call"></Section>
+        <div class="Contenedor">
+            <div class="Tarjeta">
+                <figure>
+                    <img src="img/Telefono.png" alt="Telefono" class="Telefono">
+                </figure>
+                <div class="Contenido">
+                    <h3>Call</h3>
+                    <p id="TextoEmergency" class="Call">021.123.145.14</p>
+                    <button class="Call">Call Now</button>
+                </div>
 
+            </div>    
+        </div>
+    </section>    
+
+    <section class="Chat">
+        <div class="Contenedor">
+            <div class="Tarjeta">
+                <figure>
+                    <img src="img/Chat.png" alt="Chat" class="Chat">
+                </figure>
+                <div class="Contenido">
+                    <h3>Chat</h3>
+                    <p id="TextoEmergency" class="Chat">021.123.145.14</p>
+                    <button class="Chat">Chat Now</button>
+                </div>    
+            </div>    
+        </div>
+    </section>
+
+    <section class="Video">
+        <div class="Contenedor">
+            <div class="Tarjeta">
+                <figure>
+                    <img src="img/Video.png" alt="Video" class="Video">
+                </figure>
+                <div class="Contenido">
+                    <h3>Video Call</h3>
+                    <p id="TextoEmergency" class="Video">021.123.145.14</p>
+                    <Button class="Video" id="Video">Video Call Now</Button>
+                </div>        
+            </div>
+        </div>
+    </section>
+
+    <section class="Message">
+        <div class="Contenedor">
+            <div class="Tarjeta">
+                <figure>
+                    <img src="img/Mensaje.png" alt="Mensaje" class="Mensaje">
+                </figure>
+                <div class="Contenido">
+                    <h3>Message</h3>
+                    <p id="TextoEmergency" class="Mensaje">021.123.145.14</p>
+                    <button class="Message" id="Messaje">Message Now</button>
+                </div>    
+            </div>        
+        </div>
+    </section>
 
 
     
